--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "motion": "^12.4.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "react-simple-typewriter": "^5.0.1",
