--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^11.0.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
